tests/compile_tests/should_fail/error_on_tuple_struct.stderr
error: BetterBuilder can only be derived on structs with named fields.
 --> tests/compile_tests/should_fail/error_on_tuple_struct.rs:4:1
  |
4 | / struct Cart(
5 | |     String,
6 | |     u8,
7 | |     Option<u8>,
8 | |     Vec<String>,
9 | | );
  | |__^
